# learnOpenGL

./: CMakeLists.txt  launch.json  tasks.json
OpenGL_Note/.obsidian/: config  graph.json  workspace
OpenGL_Note/00_入门/: OpenGL.md  你好，三角形.md  你好，窗口.md  创建窗口.md  变换.md  坐标系统.md  复习.md  摄像机.md  着色器.md  纹理.md
OpenGL_Note/01_光照/: 光照复习.md  光照贴图.md  基础光照.md  多光源.md  投光物.md  材质.md  颜色.md
OpenGL_Note/02_模型加载/: Assimp.md  模型.md  网格.md
OpenGL_Note/PBR/: 光照.md  理论.md
OpenGL_Note/PBR/IBL/: 漫反射辐照度.md  镜面反射 IBL.md
OpenGL_Note/实战/: 文本渲染.md
OpenGL_Note/高级OpenGL/: 几何着色器.md  实例化.md  帧缓冲.md  抗锯齿.md  模板测试.md  深度测试.md  混合.md  立方体贴图.md  面剔除.md  高级GLSL.md  高级数据.md
OpenGL_Note/高级光照/: Gamma校正.md  HDR.md  SSAO.md  延迟着色法(Deferred Shading).md  法线贴图.md  泛光(Bloom).md  点光源阴影.md  视差贴图.md  阴影映射.md  高级光照.md
